--- a/css/estilo.css
+++ b/css/estilo.css
@@ -262,21 +262,24 @@ height: max-content;
 
 
 /* footer */
-footer{
-    background-color: rgb(54, 49, 49);
+footer {
+    background-color: var(--color5);
     color: var(--color6);
-    height:auto;
-    text-align: justify;
-    margin: auto;
-    padding: 5px;
+    text-align: center;
+    padding: 10px;
 }
-footer h2 {
-    text-align: start;
-    padding:.3rem ;
+
+.footer {
+    width: 90%;
+    margin: 0 auto;
 }
-footer p {
-    text-align: start;
-    padding: .1rem;
+p {
+    margin-bottom: 10px;
+}
+
+.copyright {
+    font-size: 14px;
+    opacity: 0.8;
 }
 
 @media screen and (max-width: 768px) {
